# rust-nn

./: Cargo.toml  test.json
src/: main.rs
src/lib/: activations.rs  images.rs  matrix.rs  mod.rs  network.rs
